# pattern-hs

./: .gitmodules  DESIGN.md  README.md  TODO-later.md  TODO.md  cabal.project  pattern.cabal
.cursor/commands/: speckit.specify.md
.cursor/rules/: specify-rules.mdc
.specify/templates/: tasks-template.md
apps/gram-hs-cli/: README.md  gram-hs-cli.cabal
apps/gram-hs-cli/man/: gram-hs.1
apps/gram-hs-cli/src/: Main.hs
apps/gram-hs-cli/src/GramHs/: CLI.hs
apps/gram-hs-cli/src/GramHs/CLI/: JSON.hs  Output.hs  Types.hs
apps/gram-hs-cli/src/GramHs/CLI/Commands/: Convert.hs  Generate.hs  Match.hs  Parse.hs  Transform.hs  Validate.hs
apps/gram-hs-cli/tests/Spec/CLI/: GenerateSuiteSpec.hs  JSONSpec.hs  OutputSpec.hs
apps/gram-hs-cli/tests/Spec/Properties/: DeterministicSpec.hs
design/: DESIGN.md  SEMANTICS.md  gram-hs-cli-improvements.md
dist-newstyle/cache/: config
examples/: examples.md  markdown.gram
libs/gram/: SYNTAX_NOTES.md  gram.cabal
libs/gram/src/Gram/: CST.hs  Parse.hs  Serialize.hs  Transform.hs  Validate.hs
libs/gram/tests/: SemanticsSpec.hs
libs/pattern/: pattern.cabal
libs/pattern/src/: Pattern.hs
libs/pattern/src/Pattern/: Core.hs  Graph.hs
libs/pattern/tests/: Test.hs
libs/subject/: CHANGELOG.md
libs/subject/src/Subject/: Construction.hs  (+1 more)
specs/001-pattern-data-structure/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tooling-status.md
specs/001-pattern-data-structure/contracts/: type-signatures.md
specs/002-basic-pattern-type/: data-model.md  phase6-validation.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-basic-pattern-type/checklists/: requirements.md
specs/002-basic-pattern-type/contracts/: type-signatures.md
specs/003-pattern-structure-review/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/003-pattern-structure-review/checklists/: requirements.md
specs/003-pattern-structure-review/contracts/: terminology-standards.md
specs/004-construction-functions/: data-model.md  quickstart.md  tasks.md
specs/004-construction-functions/contracts/: type-signatures.md
specs/006-foldable-instance/: plan.md  spec.md  tasks.md
specs/007-traversable-instance/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-traversable-instance/checklists/: requirements.md
specs/007-traversable-instance/contracts/: type-signatures.md
specs/010-semigroup-instance/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-semigroup-instance/checklists/: requirements.md
specs/010-semigroup-instance/contracts/: type-signatures.md
specs/012-predicate-matching/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-predicate-matching/checklists/: requirements.md
specs/012-predicate-matching/contracts/: type-signatures.md
specs/013-applicative-instance/: quickstart.md  tasks.md
specs/013-applicative-instance/contracts/: type-signatures.md
specs/014-comonad-instance/: quickstart.md  tasks.md
specs/014-comonad-instance/contracts/: type-signatures.md
specs/014-gram-serialization/: tasks.md
specs/015-integration-polish/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/015-integration-polish/checklists/: requirements.md
specs/015-integration-polish/contracts/: type-signatures.md
specs/016-gram-parsing-conformance/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/016-gram-parsing-conformance/checklists/: requirements.md
specs/016-gram-parsing-conformance/contracts/: api.md
specs/018-pattern-path-semantics/: quickstart.md  research.md  tasks.md
specs/019-integration-polish/: tasks.md
specs/020-subject-serialization/: tasks.md
specs/022-cli-improvements/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/022-cli-improvements/checklists/: requirements.md
specs/022-cli-improvements/contracts/: cli-interface.md
specs/023-graph-lens/: tasks.md
specs/024-codefence-strings/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/024-codefence-strings/checklists/: requirements.md
specs/024-codefence-strings/contracts/: type-signatures.md
specs/025-decouple-identity-assignment/: tasks.md
src/: Pattern.hs
src/Pattern/: Core.hs
tests/: Test.hs
tests/Spec/Pattern/: CoreSpec.hs  Properties.hs
(+8 files in other folders)
